makeout
Building Sleuthkit (32-bit), please wait...
make -j32 -C ./DECAF_shared/sleuthkit > /dev/null 2>&1
make -C ./DECAF_shared/sleuthkit install > /dev/null 2>&1
Building Sleuthkit (64-bit), please wait...
make -j32 -C ./DECAF_shared/sleuthkit64 > /dev/null 2>&1
make -C ./DECAF_shared/sleuthkit64 install > /dev/null 2>&1
Compile: emulator-arm <= DECAF_shared/DECAF_main.c
objs/toolchain/x86_64-linux-gcc -Iobjs/intermediates/emulator-arm -Iobjs/intermediates/emulator_hw_config_defs -m32 -g -falign-functions=0 -O2 -fPIC -g -falign-functions=0 -O2 -fPIC -rdynamic -Wall -Wno-missing-field-initializers -D_GNU_SOURCE=1 -D__STDC_LIMIT_MACROS -I.//DECAF_shared -I.//DECAF_shared/sleuthkit -I.//DECAF_shared/sleuthkit/lib -I.//DECAF_shared/dalvik -I.//android/config/target-arm -I.//target-arm -I.//fpu -DNEED_CPU_H -I.//tcg -I.//tcg/i386 -DTARGET_ARCH=\"arm\" -Werror=implicit-function-declaration -Iobjs -I.//include -I.//qapi-auto-generated -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DENABLE_DLOG=0 -Idistrib/zlib-1.2.8/ -I.//distrib/mini-glib/include -I.//audio -DHAS_AUDIO -DCONFIG_PULSEAUDIO -DCONFIG_ALSA -DCONFIG_ESD -DCONFIG_OSS -I.//slirp-android -I.//proxy -I.//telephony -I.//distrib/libpng-1.2.46 -DSDL_AUDIO_DISABLED=1 -D_REENTRANT -Idistrib/sdl2-2.0.3//config/include -Idistrib/sdl2-2.0.3//include -I.//android/config/target-arm -I.//target-arm -I.//fpu -DNEED_CPU_H -I.//tcg -I.//tcg/i386 -DTARGET_ARCH=\"arm\" -Werror=implicit-function-declaration -Iobjs -I.//include -I.//qapi-auto-generated -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DENABLE_DLOG=0 -Idistrib/zlib-1.2.8/ -I.//distrib/mini-glib/include -DCONFIG_BDRV_WHITELIST=\"\" -I./ -Iobjs/intermediates/emulator-arm -c -o objs/intermediates/emulator-arm/DECAF_shared/DECAF_main.o -MMD -MP -MF objs/intermediates/emulator-arm/DECAF_shared/DECAF_main.o.d.tmp .//DECAF_shared/DECAF_main.c
.//DECAF_shared/DECAF_main.c: In function 'DECAF_get_phys_addr':
.//DECAF_shared/DECAF_main.c:145:8: warning: assignment from incompatible pointer type [enabled by default]
    env = /* AWH cpu_single_env ? cpu_single_env :*/ first_cpu;
        ^
.//DECAF_shared/DECAF_main.c: In function 'DECAF_read_mem__':
.//DECAF_shared/DECAF_main.c:179:38: error: 'addr' undeclared (first use in this function)
         if (cpu_memory_rw_debug(cpu, addr, buf, l, 0) != 0) {
                                      ^
.//DECAF_shared/DECAF_main.c:179:38: note: each undeclared identifier is reported only once for each function it appears in
.//DECAF_shared/DECAF_main.c:179:9: warning: passing argument 1 of 'cpu_memory_rw_debug' from incompatible pointer type [enabled by default]
         if (cpu_memory_rw_debug(cpu, addr, buf, l, 0) != 0) {
         ^
In file included from .//include/exec/ram_addr.h:23:0,
                 from .//DECAF_shared/DECAF_main.c:30:
.//include/exec/cpu-all.h:539:5: note: expected 'struct CPUState *' but argument is of type 'struct CPUARMState *'
 int cpu_memory_rw_debug(CPUState *cpu, target_ulong addr,
     ^
.//DECAF_shared/DECAF_main.c:180:23: error: 'errp' undeclared (first use in this function)
             error_setg(errp, "Invalid addr 0x%016" PRIx64 "/size %" PRId64
                       ^
.//DECAF_shared/DECAF_main.c:184:31: error: 'f' undeclared (first use in this function)
         if (fwrite(buf, 1, l, f) != l) {
                               ^
.//DECAF_shared/DECAF_main.c:186:13: error: label 'exit' used but not defined
             goto exit;
             ^
.//DECAF_shared/DECAF_main.c: At top level:
.//DECAF_shared/DECAF_main.c:747:9: warning: return type defaults to 'int' [-Wreturn-type]
  static assign_device_number(char *file_name) {
         ^
.//DECAF_shared/DECAF_main.c: In function 'DECAF_bdrv_open':
.//DECAF_shared/DECAF_main.c:760:7: warning: unused variable 'ret' [-Wunused-variable]
   int ret = 0;
       ^
.//DECAF_shared/DECAF_main.c: At top level:
.//DECAF_shared/DECAF_main.c:570:14: warning: 'DECAF_save' defined but not used [-Wunused-function]
  static void DECAF_save(QEMUFile * f, void *opaque)
              ^
.//DECAF_shared/DECAF_main.c:609:13: warning: 'DECAF_load' defined but not used [-Wunused-function]
  static int DECAF_load(QEMUFile * f, void *opaque, int version_id)
             ^
.//DECAF_shared/DECAF_main.c: In function 'assign_device_number':
.//DECAF_shared/DECAF_main.c:754:2: warning: control reaches end of non-void function [-Wreturn-type]
  }
  ^
make: *** [objs/intermediates/emulator-arm/DECAF_shared/DECAF_main.o] Error 1
